# medscrape

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  googlecreds.json.example  pyproject.toml  requirements.txt
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/medscrape/: enumeration.py  inference.py  main.py  models.py  processing.py  retrieval.py
backend/medscrape/tests/: test_enumeration.py  test_extract_urls.py  test_inference.py  test_main.py  test_medscrape.py  test_process_endpoint.py  test_processing.py  test_search.py
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  bun.lockb  components.json  next.config.mjs  package-lock.json  package.json
frontend/pages/api/: logging.tsx  process.tsx  query.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: Dashboard.tsx  LogViewer.tsx  Login.tsx  ResponseViewer.tsx  processInputForm.tsx  researchInputForm.tsx
frontend/src/components/ui/: use-toast.ts
medscrape/: enumeration.py  inference.py  main.py  models.py  processing.py  retrieval.py
medscrape/tests/: test_enumeration.py  test_inference.py  test_main.py  test_medscrape.py  test_process_endpoint.py  test_processing.py  test_query_endpoint.py  test_run_endpoint.py  test_search.py  test_search_endpoint.py
